--- a/myapp/views/index.pug
+++ b/myapp/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
+  nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
+    a(href="#" class="navbar-brand") Navbar
+
   h1= title
   p Welcome to #{title}
+  div class=""
